more queries more recall!

--- a/benchmarker/src/config.yml
+++ b/benchmarker/src/config.yml
@@ -3,4 +3,4 @@ dataset: freshstack-godot
 reload_database: False
 batch_size: 5
 max_concurrent: 5
-experiment_name: query-agent-prod
+experiment_name: pointwise-filter-result-more-queries-prompt
