--- a/benchmarker/src/config.yml
+++ b/benchmarker/src/config.yml
@@ -1,4 +1,4 @@
-agent_name: search-only-with-qwrr
+agent_name: search-only-with-qw
 dataset: freshstack-langchain
 reload_database: True
 num_samples: 20
