--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,25 @@
+[build-system]
+requires = ["setuptools>=70", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "query-agent-benchmarking"
 version = "0.1.0"
-description = "Add your description here"
-readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "dspy>=2.6.27",
-    "sentence-transformers>=5.0.0",
-    "weaviate-client[agents]>=4.15.4",
+  "dspy>=2.6.27",
+  "sentence-transformers>=5.0.0",
+  "weaviate-client>=4.15.4",
+  "weaviate-agents", # plain name here
+  "pandas>=2.3.1",
+  "datasets>=4.0.0",
 ]
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["benchmarker*"]
+exclude = ["notebooks*", "results*", "locust*", "ci*"]
+
+[tool.uv.sources]
+# Use an ABSOLUTE path, not relative
+weaviate-agents = { path = "/Users/cshorten/Desktop/dev/weaviate-agents-python-client", editable = true }
