--- a/benchmarker/config.yml
+++ b/benchmarker/config.yml
@@ -1,4 +1,4 @@
-agent_name: query-agent-search-only
+agent_name: hybrid-search
 agents_host: https://dev-agents.labs.weaviate.io
 dataset: freshstack-langchain
 use_async: False
