--- a/benchmarker/config.yml
+++ b/benchmarker/config.yml
@@ -1,6 +1,6 @@
 agent_name: hybrid-search
 agents_host: https://dev-agents.labs.weaviate.io
-dataset: freshstack-langchain
+dataset: enron
 use_async: False
 reload_database: False
 num_samples: 20
