--- a/benchmarker/config.yml
+++ b/benchmarker/config.yml
@@ -1,9 +1,9 @@
-agent_name: hybrid-search
-agents_host: https://dev-agents.labs.weaviate.io
+agent_name: query-agent-search-only
+agents_host: http://localhost:8000
 dataset: enron
 use_async: True
 reload_database: False
-num_samples: 200
+num_samples: 100
 batch_size: 5
 max_concurrent: 5
-experiment_name: hybrid-search
+experiment_name: query-agent-search-only
