--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
   "weaviate-agents", # plain name here
   "pandas>=2.3.1",
   "datasets>=4.0.0",
+  "ir-datasets>=0.5.11",
 ]
 
 [tool.setuptools.packages.find]
