--- a/benchmarker/config.yml
+++ b/benchmarker/config.yml
@@ -1,9 +1,9 @@
-agent_name: query-agent-search-only
+agent_name: hybrid-search
 agents_host: http://localhost:8000
-dataset: beir/nfcorpus/test
-use_async: True
+dataset: beir/nfcorpus/train
+use_async: False
 reload_database: False
-num_samples: 100
+num_samples: 20
 batch_size: 5
 max_concurrent: 5
-experiment_name: query-agent-search-only
+experiment_name: hybrid-search
