--- a/benchmarker/config.yml
+++ b/benchmarker/config.yml
@@ -1,6 +1,6 @@
 agent_name: hybrid-search
 agents_host: http://localhost:8000
-dataset: beir/nfcorpus/train
+dataset: wixqa
 use_async: False
 reload_database: False
 num_samples: 20
