--- a/benchmarker/config.yml
+++ b/benchmarker/config.yml
@@ -1,10 +1,10 @@
-agent_name: query-agent-search-only
+agent_name: hybrid-search
 agents_host: http://localhost:8000
-dataset: wixqa
+dataset: beir/nq
 use_async: True
 reload_database: False
 num_samples: 50
 num_trials: 5
 batch_size: 5
 max_concurrent: 5
-experiment_name: query-agent-search-only
+experiment_name: hybrid-search
