add sampling back

--- a/benchmarker/config.yml
+++ b/benchmarker/config.yml
@@ -3,6 +3,8 @@ agents_host: http://localhost:8000
 dataset: beir/nq
 use_async: True
 reload_database: False
+use_subset: True
+num_samples: 5
 num_trials: 1
 batch_size: 5
 max_concurrent: 5
