--- a/benchmarker/config.yml
+++ b/benchmarker/config.yml
@@ -1,4 +1,4 @@
-agent_name: hybrid-search
+agent_name: query-agent-search-only
 agents_host: http://localhost:8000
 dataset: beir/nq
 use_async: True
@@ -8,4 +8,4 @@ num_samples: 5
 num_trials: 1
 batch_size: 5
 max_concurrent: 5
-experiment_name: hybrid-search
+experiment_name: query-agent-search-only
