--- a/benchmarker/benchmark-config.yml
+++ b/benchmarker/benchmark-config.yml
@@ -1,6 +1,6 @@
 agent_name: query-agent-search-only
 agents_host: http://localhost:8000
-dataset: lotte/lifestyle/test
+dataset: lotte/lifestyle/test/forum
 use_async: True
 reload_database: False # remove this, isolate always
 use_subset: True
