--- a/benchmarker/benchmark-config.yml
+++ b/benchmarker/benchmark-config.yml
@@ -1,8 +1,8 @@
 agent_name: hybrid-search
 agents_host: http://localhost:8000
-dataset: wixqa
+dataset: beir/nq
 use_async: True
-use_subset: False
+use_subset: True
 num_samples: 500
 num_trials: 1
 batch_size: 5
