--- a/benchmarker/benchmark-config.yml
+++ b/benchmarker/benchmark-config.yml
@@ -1,10 +1,10 @@
-agent_name: hybrid-search
+agent_name: query-agent-search-only
 agents_host: http://localhost:8000
 dataset: beir/nq
 use_async: True
-use_subset: True
+use_subset: False
 num_samples: 500
-num_trials: 1
+num_trials: 3
 batch_size: 5
 max_concurrent: 5
-experiment_name: hybrid-search
+experiment_name: query-agent-search-only
