--- a/benchmarker/benchmark-config.yml
+++ b/benchmarker/benchmark-config.yml
@@ -1,10 +1,10 @@
-agent_name: query-agent-search-only
+agent_name: hybrid-search
 agents_host: http://localhost:8000
 dataset: bright/biology
 use_async: True
 use_subset: False
 num_samples: 500
-num_trials: 3
+num_trials: 1
 batch_size: 5
 max_concurrent: 5
-experiment_name: query-agent-search-only
+experiment_name: hybrid-search
