add setuptools wheel twine

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ dependencies = [
   "datasets>=4.0.0",
   "ir-datasets>=0.5.11",
   "pip>=25.2",
+  "setuptools>=80.9.0",
+  "wheel>=0.45.1",
+  "twine>=6.2.0",
 ]
 
 [tool.setuptools.packages.find]
