--- a/query_agent_benchmarking/benchmark-config.yml
+++ b/query_agent_benchmarking/benchmark-config.yml
@@ -1,10 +1,10 @@
-agent_name: query-agent-search-only
+agent_name: hybrid-search
 agents_host: https://api.agents.weaviate.io
 dataset: bright/psychology
 use_async: True
-use_subset: False
-num_samples: 500
+use_subset: True
+num_samples: 50
 num_trials: 3
 batch_size: 5
 max_concurrent: 5
-experiment_name: query-agent-search-only
+experiment_name: hybrid-search
