--- a/query_agent_benchmarking/benchmark-config.yml
+++ b/query_agent_benchmarking/benchmark-config.yml
@@ -1,13 +1,16 @@
 agent_name: "hybrid-search"
+dataset: bright/biology
+
+use_async: True
+max_concurrent: 5
+
+use_subset: False
+num_samples: 5
+
+num_trials: 1
+batch_size: 5
+
+agents_host: https://api.agents.weaviate.io
 embedding_models: 
 - "Snowflake/snowflake-arctic-embed-l-v2.0"
 - "Snowflake/snowflake-arctic-embed-m-v1.5"
-agents_host: https://api.agents.weaviate.io
-dataset: bright/biology
-use_async: True
-use_subset: True
-num_samples: 5
-num_trials: 1
-batch_size: 5
-max_concurrent: 5
-experiment_name: hybrid-search
